[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Menus/MenuPrincipal/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/FX/Musicas/menuPrincipal-energy.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Menus/MenuDaCena.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fontes/ursoFeliz/The Happy Bear.otf"

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fontes/titulo/Just One.ttf"

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = SubResource( 3 )

[node name="MenuPrincipal" type="Node"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBg" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imgFundo" type="Sprite" parent="Control/PanelBg"]
position = Vector2( -0.663422, -9.00001 )
scale = Vector2( 0.381742, 0.384132 )
texture = ExtResource( 1 )
centered = false

[node name="LabelTitulo" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "chovendo frutas"
uppercase = true

[node name="ButtonComecar" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -106.0
margin_right = 2.0
margin_bottom = -72.0
custom_fonts/font = SubResource( 4 )
text = "Come√ßar"

[node name="ButtonAjuda" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -70.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 4 )
text = "Ajuda"

[node name="ButtonSair" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -34.0
custom_fonts/font = SubResource( 4 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioMenuPrincipal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
[connection signal="button_down" from="Control/ButtonComecar" to="." method="_on_ButtonComecar_button_down"]
[connection signal="button_down" from="Control/ButtonAjuda" to="." method="_on_ButtonAjuda_button_down"]
[connection signal="button_down" from="Control/ButtonSair" to="." method="_on_ButtonSair_button_down"]
